style.css
html {
  height: 100%;
  width: 100%;
}

body {
  font-family: serif;
}

.landing-top {
  background-color: darkslategray;
  height: 75px;
  border: 2px solid black;
}

.topnav {
  background-color: slategray;
  overflow: hidden;
}

.topnav a {
  float: left;
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: black;
  color: silver;
}

 .landing-body {
   background-image: url("maze-entrance.png");
   height: auto;
   border: 2px solid black;
 }

  .landing-body h1 {
    font-size: 80px;
    color: lightslategray;
    margin: 18px;
    background-color: rgba(0,0,0,0.2);
  }

  .landing-body h4 {
    color: silver;
    font-size: 50px;
    margin: 20px
  }

  .landing-body p {
    font-size: 30px;
    color: lightslategray;
    margin: 16px;
  }

  .landing-button {
     background-color: darkslategray;
     border: 3px solid silver;
     border-radius: 24px;
     color: gray;
     padding: 16px 40px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
     transition-duration: 2s;
   }

    .landing-button:hover {
      background-color: lightslategray;
      color: silver;
    }

 .landing-bottom {
   background-color: black;
   height: 80px;
   border: 2px solid silver;
 }

  .landing-bottom a {
    font-size: 40px;
    color: silver;
  }

  .help-top {
    background-color: darkslategray;
    height: 75px;
    border: 2px solid black;
  }

  .help-body {
     background-image: url("maze-entrance.png");
     height: auto;
     border: 2px solid black;
   }

  .help-body h2 {
    font-size: 45px;
    color: silver;
    margin: 20px;
  }

  .help-body p {
    font-size: 20px;
    color: lightslategray;
    margin: 18px;
  }

  .help-button {
     background-color: darkslategray;
     border: 3px solid silver;
     border-radius: 24px;
     color: gray;
     padding: 16px 40px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
     transition-duration: 2s;
   }

   .help-button:hover {
     background-color: lightslategray;
     color: silver;
   }

   .help-bottom {
     background-color: black;
     height: 80px;
     border: 2px solid silver;
   }

   .help-bottom a {
     font-size: 40px;
     color: silver;
   }

  .info-top {
    background-color: darkslategray;
    height: 75px;
    border: 2px solid black;
  }

  .info-body {
    background-image: url("maze-entrance.png");
    height: auto;
    border: 2px solid black;
  }

  .info-body h2 {
    font-size: 45px;
    color: silver;
    margin: 20px;
  }

  .info-body p {
    font-size: 20px;
    color: lightslategray;
    margin: 18px;
  }

  .info-button {
    background-color: darkslategray;
    border: 3px solid silver;
    border-radius: 24px;
    color: gray;
    padding: 16px 40px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 20px;
    margin: 4px 2px;
    cursor: pointer;
    transition-duration: 2s;
  }

  .info-button:hover {
    background-color: lightslategray;
    color: silver;
  }

 .info-bottom {
   background-color: black;
   height: 80px;
   border: 2px solid silver;
 }

 .info-bottom a {
   font-size: 40px;
   color: silver;
 }

